--- a/app/popup.html
+++ b/app/popup.html
@@ -40,7 +40,7 @@
 
       <h5>
         Completed tasks
-        <small>(<a {{action archiveTasks}}>archive</a>)</small>
+        <small>(<a {{action archiveTasks}} href="#">archive all completed</a>)</small>
       </h5>
 
       <ul class="completed-task-list">
