Fix the path of popup.js in popup.html

--- a/app/popup.html
+++ b/app/popup.html
@@ -178,7 +178,7 @@
     <script src="components/ember-data/index.js"></script>
     <script src="components/ember-localstorage/localstorage_adapter.js"></script>
     <script src="components/moment.js/moment.js"></script>
-    <script src="compiled_js/popup.js"></script>
+    <script src="tmp/scripts/popup.js"></script>
     <!-- endbuild -->
   </body>
 </html>
